--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
 </div>
 
 <div id="contents">
-    <a href="Entertainment.html"><button  class="button button1"><h2>Entertainment</h2></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"><h2>Mutual help</h2></n></button></a>
+    <a href="science.html"><button type="submit" style="border: 0; background: transparent">
+        <h2></h2> <img src="images/062a49107fd72a86b578788962d316b4.jpg" width="370" height="300" alt="submit" />
+    </button></a>
+
+    <a href="Mutual%20Help.html"><button type="submit" style="border: 0; background: transparent"></n>
+    <img src="images/photodune-8965671-group-of-diverse-multiethnic-people-teamwork-m.jpg" width="370" height="300" alt="submit" /><h2>Mutual help</h2></button></a>
+
     <a href="science.html"><button type="submit" style="border: 0; background: transparent">
         <h2></h2> <img src="images/science.png" width="370" height="300" alt="submit" />
     </button></a>
