--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
 
 <div id="contents">
     <a href="science.html"><button type="submit" style="border: 0; background: transparent">
-        <h2></h2> <img src="images/062a49107fd72a86b578788962d316b4.jpg" width="370" height="300" alt="submit" />
+         <img src="images/16703619-Girl-and-boy-on-white-background-Stock-Vector-love-cartoon-couple.jpg" width="370" height="300" alt="submit" />
+        <div class="module mid"><h2>Entertainment</h2></div>
     </button></a>
 
-    <a href="Mutual%20Help.html"><button type="submit" style="border: 0; background: transparent"></n>
+    <a href="Mutual%20Help.html"><button type="submit" style="border: 0; background: transparent">
     <img src="images/photodune-8965671-group-of-diverse-multiethnic-people-teamwork-m.jpg" width="370" height="300" alt="submit" /><h2>Mutual help</h2></button></a>
 
     <a href="science.html"><button type="submit" style="border: 0; background: transparent">
