--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="https://bootswatch.com/darkly/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
     <style>
         .w3-btn {margin-bottom:10px;}
@@ -17,24 +18,7 @@
                 <a href ="#" class="name">UserExample</a>
                 <ul class="menu">
                     <li><a href="#">My Profile</a>
-                        <!--           <ul class="menu-v">
-                                            <li class="dir"><a href="#">Interests</a></li>
-                                            <li class="dir"><a href="#">My Events</a>
-                                                <ul class="sub">
-                                                    <li><a href="#">Organizing</a></li>
-                                                    <li><a href="#">Participating</a></li>
-                                                </ul>
-                                            <li>
-                                            <li><a href="#">Communities</a>
-                                                <ul class="sub">
-                                                    <li><a href="#">Entertainment</a></li>
-                                                    <li><a href="#">Mutual Help</a></li>
-                                                    <li><a href="#">Science</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="#">My videos</a></li>
-                                        </ul>
-                                     --->
+
                     </li>
                     <li><a href="#">Settings</a></li>
                     <li><a href="#">Chat</a></li>
