main.css changed and button fixed on index.html

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </div>
 
     <div id="contents">
-        <a href="Entertainment.html"><button class="button button1"><h2>Entertainment</h2></button></a>
-        <a href="science.html"><button class="button button3"><h2>Science</h2></button></a>
-        <a href="Mutual%20Help.html"><button class="button button2"><h2>Mutual help</h2></button></a>
+        <a href="Entertainment.html" class="button button1">Entertainment</a>
+        <a href="science.html" class="button button3">Science</a>
+        <a href="Mutual%20Help.html"class="button button2">Mutual help</a>
     </div>
 
 </body>
