--- a/ChangeUsername.html
+++ b/ChangeUsername.html
@@ -65,7 +65,7 @@
             <div class="form-group">
                 <label for="inputEmail" class="col-lg-2 control-label">Current password</label>
                 <div class="col-lg-10">
-                    <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+                    <input type="text" class="form-control" id="inputEmail" placeholder="Password">
                 </div>
             </div>
             <br>
@@ -80,7 +80,7 @@
             <div class="form-group">
                 <label for="inputPassword" class="col-lg-2 control-label">New username</label>
                 <div class="col-lg-10">
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Username">
                 </div>
             </div>
             <br>
