--- a/interests.html
+++ b/interests.html
@@ -35,7 +35,7 @@
                         </div>
                     </li>
                     <li><a id="page_self_improve_tool" href="SelfImprove.html">Selfimprove tool</a></li>
-                    <li><a id="page_logout" href="#">Log out</a></li>
+                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
                 </ul>
             </div>
         </li>
