updated communities.css and started adding

--- a/ChangeImage.html
+++ b/ChangeImage.html
@@ -72,7 +72,10 @@
         </fieldset>
     </form>
 </div>
-
-
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
 </html>
