--- a/ChangePassword.html
+++ b/ChangePassword.html
@@ -100,6 +100,10 @@
     </form>
 </div>
 
-
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
 </html>
