--- a/LoggedOut.html
+++ b/LoggedOut.html
@@ -24,7 +24,11 @@
 </div>
 
 
-
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
 
 </html>
