--- a/Mutual Help.html
+++ b/Mutual Help.html
@@ -46,7 +46,11 @@
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
 </div>
-
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
 
 </html>
