--- a/Settings.html
+++ b/Settings.html
@@ -59,6 +59,10 @@
     </ul>
 </div>
 
-
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
 </html>
