--- a/index.html
+++ b/index.html
@@ -43,11 +43,15 @@
     </div>
 
     <div id="contents">
-        <a href="Entertainment.html" class="button button1">Entertainment</a>
-        <a href="science.html" class="button button3">Science</a>
-        <a href="Mutual%20Help.html"class="button button2">Mutual help</a>
+        <a href="Entertainment.html" class="button button1"><h2>Entertainment</h2></a>
+        <a href="science.html" class="button button3"><h2>Science</h2></a>
+        <a href="Mutual%20Help.html"class="button button2"><h2>Mutual Help</h2></a>
     </div>
-
+<footer >
+<div class="the_footer">
+  <h3>© 2016 - SocialMegazord inc.</h3>
+</div>
+</footer>
 </body>
 
 </html>
