--- a/Entertainment.html
+++ b/Entertainment.html
@@ -47,7 +47,24 @@
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
 </div>
-
+<div id="navMyProfile">
+    <style>
+        .navUL {
+            margin-left: 33%;
+            margin-right: 38.9%;
+        }
+    </style>
+    <ul class="navUL">
+        <li class="navLi"><a href="ChangeUsername.html">Change username</a></li>
+        <li class="navLi"><a href="ChangePassword.html">Change password</a></li>
+        <li class="navLi"><a href="ChangeImage.html">Change image</a></li>
+    </ul>
+</div>
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
 
 </html>
