--- a/MyProfile.html
+++ b/MyProfile.html
@@ -57,6 +57,10 @@
     </ul>
 </div>
 
-
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
 </html>
