--- a/Entertainment.html
+++ b/Entertainment.html
@@ -30,7 +30,7 @@
                             <ul>
                                 <a href="ChangePassword.html"><li>Change password</li></a>
                                 <a href="ChangeUsername.html"><li>Change username</li></a>
-                                <a href="ChangeImage.html"><li>Change image</li></a>
+                                <a href="ChangeImage.html"><li>Change profile picture</li></a>
                             </ul>
                         </div>
                     </li>
@@ -55,9 +55,8 @@
         }
     </style>
     <ul class="navUL">
-        <li class="navLi"><a href="ChangeUsername.html">Change username</a></li>
-        <li class="navLi"><a href="ChangePassword.html">Change password</a></li>
-        <li class="navLi"><a href="ChangeImage.html">Change image</a></li>
+        <li class="navLi"><a href="#">Create New Post</a></li>
+        <li class="navLi"><a href="#">View My Posts</a></li>
     </ul>
 </div>
 <footer >
