--- a/LoggedOut.html
+++ b/LoggedOut.html
@@ -7,16 +7,23 @@
 </head>
 
 <body>
-<div id="profile div">
+<div id="profile_div">
     <ul class="profile-wrapper">
         <li>
             <div class="profile">
-                <a href ="#" class="name">Login</a>
-            </div>
-        </li>
-    </ul>
-</div>
-
+                <a href ="#" class="name">Register/Login</a>
+                <ul class="menu">
+                    <li>
+                        <a href="#">Register</a>
+                    </li>
+                    <li>
+                        <a href="#">Login</a>
+                    </li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </div>
 <div id="contents">
     <a href="Entertainment.html"><button class="button button1"><h2>Entertainment</h2></button></a>
     <a href="Mutual%20Help.html"><button class="button button2"><h2>Mutual help</h2></button></a>
