--- a/interests.html
+++ b/interests.html
@@ -47,8 +47,13 @@
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
 </div>
-
-<<div id="navMyProfile">
+<div id="navMyProfile">
+    <style>
+        .navUL {
+            margin-left: 33%;
+            margin-right: 38.9%;
+        }
+    </style>
     <ul class="navUL">
         <li class="navLi"><a href="interests.html">Interests</a></li>
         <li class="navLi"><a href="myevents.html">My Events</a></li>
