--- a/myvideos.html
+++ b/myvideos.html
@@ -49,6 +49,12 @@
 </div>
 
 <div id="navMyProfile">
+    <style>
+        .navUL {
+            margin-left: 33%;
+            margin-right: 38.9%;
+        }
+    </style>
     <ul class="navUL">
         <li class="navLi"><a href="interests.html">Interests</a></li>
         <li class="navLi"><a href="myevents.html">My Events</a></li>
