--- a/science.html
+++ b/science.html
@@ -34,6 +34,18 @@
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
 </div>
+<div id="navMyProfile">
+    <style>
+        .navUL {
+            margin-left: 33%;
+            margin-right: 38.9%;
+        }
+    </style>
+    <ul class="navUL">
+        <li class="navLi"><a href="#">Create New Post</a></li>
+        <li class="navLi"><a href="#">View My Posts</a></li>
+    </ul>
+</div>
 <footer >
     <div class="the_footer">
         <h3>© 2016 - SocialMegazord inc.</h3>
