--- a/Entertainment.html
+++ b/Entertainment.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-
+<header>
 <div id="profile_div">
     <ul class="profile-wrapper">
         <li>
@@ -47,18 +47,49 @@
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
 </div>
+    </header>
 <div id="navMyProfile">
-    <style>
-        .navUL {
-            margin-left: 33%;
-            margin-right: 38.9%;
-        }
-    </style>
+
     <ul class="navUL">
         <li class="navLi"><a href="#">Create New Post</a></li>
         <li class="navLi"><a href="#">View My Posts</a></li>
     </ul>
 </div>
+<main>
+    <div class="container body-content">
+        <div class="row">
+            <div class="col-md-6">
+                <article>
+                    <header>
+                        <h2>Why Choosing the Right Storage Infrastructure.</h2>
+                    </header>
+
+                    <p>
+                        There's been a fair bit of hype surrounding the latest SpaceX upright rocket landing.
+                        Simple as it seems, the excitement Sci-Fi Today, Reality TV Tomorrow, at least for me,
+                        stems from how the feat has brought us one step closer to fulfilling our sci-fi fantasies -
+                        etched into our minds by the many blockbuster flicks Hollywood has produced. If you can recall
+                        one of the opening scenes of The Martian, we witnessed the Mars Ascent Vehicle (MAV) lifting off,
+                        attempting to escape an ensuing dust storm. While most of the focus was on the misfortune of Mark Watney -
+                        played by Matt Damon, left behind after being struck by debris,
+                        you could say we took for granted how easily the MAV ascended into space.
+                        Combine the thought of how the MAV got there in the first place,
+                        and you have yourself a similar parallel to the SpaceX launch and landing.
+                        So what am I gettination. This applies not just to space travel,
+                        but every other area of technological advancement.
+                    </p>
+                    <small class="author">
+                        Steve Fowler
+                    </small>
+
+                    <footer>
+                        <div class="pull-right">
+                            <a class="btn btn-default btn-xs" href="#">Read more &raquo;</a>
+                        </div>
+                    </footer>
+                </article>
+            </div>
+</main>
 <footer >
     <div class="the_footer">
         <h3>© 2016 - SocialMegazord inc.</h3>
