--- a/Mutual Help.html
+++ b/Mutual Help.html
@@ -47,6 +47,10 @@
     <a href="science.html"><button class="button button3"></button></a>
 </div>
 
+<div class="stuff">
+
+</div>
+
 </body>
 
 </html>
