--- a/interests.html
+++ b/interests.html
@@ -48,7 +48,13 @@
     <a href="science.html"><button class="button button3"></button></a>
 </div>
 
-<<div id="navMyProfile">
+<div id="navMyProfile">
+    <style>
+        .navUL {
+            width: 109%;
+            left: 29%;
+        }
+    </style>
     <ul class="navUL">
         <li class="navLi"><a href="interests.html">Interests</a></li>
         <li class="navLi"><a href="myevents.html">My Events</a></li>
