added some features on ChangeImage.html & communities.css;

--- a/ChangeImage.html
+++ b/ChangeImage.html
@@ -37,7 +37,7 @@
                         </div>
                     </li>
                     <li><a id="page_self_improve_tool" href="SelfImprove.html">Selfimprove tool</a></li>
-                    <li><a id="page_logout" href="#">Log out</a></li>
+                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -45,12 +45,13 @@
 </div>
 
 <div id="contents">
-    <a href="Entertainment.html"><h1><button class="button button1"></button></a>
+    <a href="Entertainment.html"><button class="button button1"></button></a>
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
-    <a href="science.html"><button class="button button3"></button></a></h1>
+    <a href="science.html"><button class="button button3"></button></a>
 </div>
 
 <div id="navMyProfile">
+
     <ul class="navUL">
         <li class="navLi"><a href="ChangeUsername.html">Change username</a></li>
         <li class="navLi"><a href="ChangePassword.html">Change password</a></li>
@@ -62,7 +63,11 @@
     <form class="form-horizontal">
         <fieldset>
             <legend>Change image</legend>
-
+            <img src="http://www.queensquinoa.com/images/default-image.png" alt="Mountain View" style="width:300px;height:200px;">
+            <form action="demo_form.asp">
+                <input type="file" name="pic" accept="image/*">
+                <input type="submit">
+            </form>
         </fieldset>
     </form>
 </div>
@@ -71,5 +76,6 @@
         <h3>© 2016 - SocialMegazord inc.</h3>
     </div>
 </footer>
+
 </body>
 </html>
