Removed SelfImprover and Login form

--- a/LoggedOut.html
+++ b/LoggedOut.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <title>Mutual Help</title>
+    <title>Login</title>
 </head>
 
 <body>
@@ -17,18 +17,12 @@
                         <a href="#">Register</a>
                     </li>
                     <li>
-                        <a href="#">Login</a>
+                        <a href="LoggedOut.html">Login</a>
                     </li>
                 </ul>
             </div>
         </li>
     </ul>
-</div>
-
-<div id="contents">
-    <a href="Entertainment.html"><button class="button button1"></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
-    <a href="science.html"><button class="button button3"></button></a>
 </div>
 
 <div id="navMyProfile">
@@ -38,7 +32,6 @@
             margin-right: 38.9%;
         }
     </style>
-
 
     <div id="login">
         <form>
@@ -53,12 +46,24 @@
             <input type="submit" value="Log in">
         </form>
     </div>
+
+
+    <footer >
+        <div class="the_footer">
+            <h3>© 2016 - SocialMegazord inc.</h3>
+        </div>
+    </footer>
+
 </div>
-<footer >
-    <div class="the_footer">
-        <h3>© 2016 - SocialMegazord inc.</h3>
-    </div>
-</footer>
+
+<div id="contents">
+    <a href="Entertainment.html"><button class="button button1"></button></a>
+    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
+    <a href="science.html"><button class="button button3"></button></a>
+</div>
+
 </body>
+
+
 
 </html>
