--- a/Unlogged-users/science.html
+++ b/Unlogged-users/science.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/communities.css">
+    <link rel="stylesheet" type="text/css" href="../css/communities.css">
     <style>
         .w3-btn {margin-bottom:10px;}
     </style>
