--- a/Unlogged-users/register.html
+++ b/Unlogged-users/register.html
@@ -9,7 +9,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/communities.css">
+    <link rel="stylesheet" type="text/css" href="../css/communities.css">
     <title>Login</title>
 </head>
 
