changed and added login.html; deleted SelfImprove.html;

--- a/Entertainment.html
+++ b/Entertainment.html
@@ -34,7 +34,6 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_self_improve_tool" href="SelfImprove.html">Selfimprove tool</a></li>
                     <li><a id="page_logout" href="#">Log out</a></li>
                 </ul>
             </div>
@@ -52,7 +51,7 @@
     <ul class="navUL">
         <li class="navLi"><a href="#">Create New Post</a></li>
         <li class="navLi"><a href="#">Create New Event</a></li>
-        <li class="navLi"><a href="#">View My Posts</a></li>
+        <li class="navLi"><a href="#">My Posts</a></li>
     </ul>
 </div>
 <main>
