--- a/science.html
+++ b/science.html
@@ -36,7 +36,7 @@
     <ul class="navUL">
         <li class="navLi"><a href="#">Create New Post</a></li>
         <li class="navLi"><a href="#">Create New Event</a></li>
-        <li class="navLi"><a href="#">View My Posts</a></li>
+        <li class="navLi"><a href="#">My Posts</a></li>
     </ul>
 </div>
 <main>
