--- a/ChangeImage.html
+++ b/ChangeImage.html
@@ -63,7 +63,7 @@
     <form class="form-horizontal">
         <fieldset>
             <legend>Change image</legend>
-            <img src="http://www.queensquinoa.com/images/default-image.png" alt="Mountain View" style="width:300px;height:200px;">
+            <img src="http://www.queensquinoa.com/images/default-image.png" alt="No Image View" style="width:300px;height:200px;">
             <form action="demo_form.asp">
                 <input type="file" name="pic" accept="image/*">
                 <input type="submit">
