--- a/myvideos.html
+++ b/myvideos.html
@@ -47,7 +47,7 @@
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
 </div>
-
+<main>
 <div id="navMyProfile">
     <ul class="navUL">
         <li class="navLi"><a href="interests.html">Interests</a></li>
@@ -55,7 +55,7 @@
         <li class="navLi"><a href="myvideos.html">My videos</a></li>
     </ul>
 </div>
-
+</main>
 <footer >
     <div class="the_footer">
         <h3>© 2016 - SocialMegazord inc.</h3>
