--- a/ChangePassword.html
+++ b/ChangePassword.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <style>
-        .w3-btn {margin-bottom:10px;}
-    </style>
     <title>Change Password</title>
 </head>
 
@@ -36,8 +33,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_self_improve_tool" href="SelfImprove.html">Selfimprove tool</a></li>
-                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
+                    <li><a id="page_logout" href="#">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -100,6 +96,10 @@
     </form>
 </div>
 
-
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
 </html>
