--- a/Settings.html
+++ b/Settings.html
@@ -32,18 +32,15 @@
                             <ul>
                                 <a href="ChangePassword.html"><li>Change password</li></a>
                                 <a href="ChangeUsername.html"><li>Change username</li></a>
-                                <a href="ChangeImage.html"><li>Change image</li></a>
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_self_improve_tool" href="SelfImprove.html">Selfimprove tool</a></li>
-                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
+                    <li><a id="page_logout" href="#">Log out</a></li>
                 </ul>
             </div>
         </li>
     </ul>
 </div>
-
 
 <div id="contents">
     <a href="Entertainment.html"><button class="button button1"></button></a>
@@ -59,6 +56,10 @@
     </ul>
 </div>
 
-
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
 </html>
