--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 
 <body>
-
     <div id="profile_div">
         <ul class="profile-wrapper">
             <li>
@@ -34,7 +33,6 @@
                                     </ul>
                             </div>
                         </li>
-                        <li><a id="page_self_improve_tool" href="SelfImprove.html">Selfimprove tool</a></li>
                         <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
                     </ul>
                 </div>
@@ -43,11 +41,15 @@
     </div>
 
     <div id="contents">
-        <a href="Entertainment.html"><button class="button button1"><h2>Entertainment</h2></button></a>
-        <a href="science.html"><button class="button button3"><h2>Science</h2></button></a>
-        <a href="Mutual%20Help.html"><button class="button button2"><h2>Mutual help</h2></button></a>
+        <a href="Entertainment.html" class="button button1"><h2>Entertainment</h2></a>
+        <a href="science.html" class="button button3"><h2>Science</h2></a>
+        <a href="Mutual%20Help.html"class="button button2"><h2>Mutual Help</h2></a>
     </div>
-
+<footer >
+<div class="the_footer">
+  <h3>© 2016 - SocialMegazord inc.</h3>
+</div>
+</footer>
 </body>
 
 </html>
