--- a/myevents.html
+++ b/myevents.html
@@ -30,12 +30,10 @@
                             <ul>
                                 <a href="ChangePassword.html"><li>Change password</li></a>
                                 <a href="ChangeUsername.html"><li>Change username</li></a>
-                                <a href="ChangeImage.html"><li>Change image</li></a>
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_self_improve_tool" href="SelfImprove.html">Selfimprove tool</a></li>
-                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
+                    <li><a id="page_logout" href="#">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -55,6 +53,10 @@
         <li class="navLi"><a href="myvideos.html">My videos</a></li>
     </ul>
 </div>
-
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
 </html>
