--- a/interests.html
+++ b/interests.html
@@ -34,8 +34,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_self_improve_tool" href="SelfImprove.html">Selfimprove tool</a></li>
-                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
+                    <li><a id="page_logout" href="#">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -47,8 +46,7 @@
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
 </div>
-
-<<div id="navMyProfile">
+<div id="navMyProfile">
     <ul class="navUL">
         <li class="navLi"><a href="interests.html">Interests</a></li>
         <li class="navLi"><a href="myevents.html">My Events</a></li>
@@ -56,6 +54,10 @@
     </ul>
 </div>
 
-
+<footer >
+    <div class="the_footer">
+        <h3>© 2016 - SocialMegazord inc.</h3>
+    </div>
+</footer>
 </body>
 </html>
