--- a/LoggedOut.html
+++ b/LoggedOut.html
@@ -14,7 +14,7 @@
                 <a href ="#" class="name">Register/Login</a>
                 <ul class="menu">
                     <li>
-                        <a href="#">Register</a>
+                        <a href="Registration.html">Register</a>
                     </li>
                     <li>
                         <a href="LoggedOut.html">Login</a>
@@ -36,11 +36,9 @@
     <div id="login">
         <form>
             <div id="inputForm">
-                <label>User name</label><br/><br/>
                 <input type="text" placeholder="User name"><br/><br/>
             </div>
             <div id="inputForm">
-                <label>Password</label><br/><br/>
                 <input type="password" placeholder="Password">
             </div>
             <input type="submit" value="Log in">
