--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+
     <div id="profile_div">
         <ul class="profile-wrapper">
             <li>
@@ -41,15 +42,10 @@
     </div>
 
     <div id="contents">
-        <a href="Entertainment.html" class="button button1"><h2>Entertainment</h2></a>
-        <a href="science.html" class="button button3"><h2>Science</h2></a>
-        <a href="Mutual%20Help.html"class="button button2"><h2>Mutual Help</h2></a>
+        <a href="Entertainment.html"><button class="button button1"><h2>Entertainment</h2></button></a>
+        <a href="science.html"><button class="button button3"><h2>Science</h2></button></a>
+        <a href="Mutual%20Help.html"><button class="button button2"><h2>Mutual help</h2></button></a>
     </div>
-<footer >
-<div class="the_footer">
-  <h3>© 2016 - SocialMegazord inc.</h3>
-</div>
-</footer>
-</body>
 
+</body>
 </html>
