--- a/ChangePassword.html
+++ b/ChangePassword.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
+    <style>
+        .w3-btn {margin-bottom:10px;}
+    </style>
     <title>Change Password</title>
 </head>
 
@@ -33,26 +36,22 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="#">Log out</a></li>
+                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
                 </ul>
             </div>
         </li>
     </ul>
 </div>
 
+
 <div id="contents">
     <a href="Entertainment.html"><button class="button button1"></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
+    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
 </div>
 
 <div id="navMyProfile">
-    <style>
-        .navUL {
-            margin-left: 33%;
-            margin-right: 38.9%;
-        }
-    </style>
+
     <ul class="navUL">
         <li class="navLi"><a href="ChangeUsername.html">Change username</a></li>
         <li class="navLi"><a href="ChangePassword.html">Change password</a></li>
@@ -96,10 +95,6 @@
     </form>
 </div>
 
-<footer >
-    <div class="the_footer">
-        <h3>© 2016 - SocialMegazord inc.</h3>
-    </div>
-</footer>
+
 </body>
 </html>
