--- a/ChangeUsername.html
+++ b/ChangeUsername.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
+    <style>
+        .w3-btn {margin-bottom:10px;}
+    </style>
     <title>Change username</title>
 </head>
 
@@ -33,8 +36,7 @@
                             </ul>
                         </div>
                     </li>
-
-                    <li><a id="page_logout" href="#">Log out</a></li>
+                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -43,8 +45,8 @@
 
 <div id="contents">
     <a href="Entertainment.html"><button class="button button1"></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
+    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
 </div>
 
 <div id="navMyProfile">
@@ -91,10 +93,6 @@
     </form>
 </div>
 
-<footer>
-    <div class="the_footer">
-        <h3>© 2016 - SocialMegazord inc.</h3>
-    </div>
-</footer>
+
 </body>
 </html>
