--- a/LoggedOut.html
+++ b/LoggedOut.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="css/communities.css">
+    <title>Login</title>
 </head>
 
 <body>
@@ -14,28 +14,54 @@
                 <a href ="#" class="name">Register/Login</a>
                 <ul class="menu">
                     <li>
-                        <a href="#">Register</a>
+                        <a href="Registration.html">Register</a>
                     </li>
                     <li>
-                        <a href="#">Login</a>
+                        <a href="LoggedOut.html">Login</a>
                     </li>
-                    </ul>
-                </div>
-            </li>
-        </ul>
-    </div>
-<div id="contents">
-    <a href="Entertainment.html"><button class="button button1"><h2>Entertainment</h2></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"><h2>Mutual help</h2></button></a>
-    <a href="science.html"><button class="button button3"><h2>Science</h2></button></a>
+                </ul>
+            </div>
+        </li>
+    </ul>
 </div>
 
+<div id="navMyProfile">
+    <style>
+        .navUL {
+            margin-left: 33%;
+            margin-right: 38.9%;
+        }
+    </style>
 
-<footer >
-    <div class="the_footer">
-        <h3>© 2016 - SocialMegazord inc.</h3>
+    <div id="login">
+        <form>
+            <div id="inputForm">
+                <input type="text" placeholder="User name"><br/><br/>
+            </div>
+            <div id="inputForm">
+                <input type="password" placeholder="Password">
+            </div>
+            <input type="submit" value="Log in">
+        </form>
     </div>
-</footer>
+
+
+    <footer >
+        <div class="the_footer">
+            <h3>© 2016 - SocialMegazord inc.</h3>
+        </div>
+    </footer>
+
+</div>
+
+<div id="contents">
+    <a href="Entertainment.html"><button class="button button1"></button></a>
+    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
+    <a href="science.html"><button class="button button3"></button></a>
+</div>
+
 </body>
+
+
 
 </html>
