--- a/Settings.html
+++ b/Settings.html
@@ -32,20 +32,22 @@
                             <ul>
                                 <a href="ChangePassword.html"><li>Change password</li></a>
                                 <a href="ChangeUsername.html"><li>Change username</li></a>
+                                <a href="ChangeImage.html"><li>Change image</li></a>
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="#">Log out</a></li>
+                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
                 </ul>
             </div>
         </li>
     </ul>
 </div>
 
+
 <div id="contents">
     <a href="Entertainment.html"><button class="button button1"></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
+    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
 </div>
 
 <div id="navMyProfile">
@@ -56,10 +58,6 @@
     </ul>
 </div>
 
-<footer >
-    <div class="the_footer">
-        <h3>© 2016 - SocialMegazord inc.</h3>
-    </div>
-</footer>
+
 </body>
 </html>
