--- a/interests.html
+++ b/interests.html
@@ -34,7 +34,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="#">Log out</a></li>
+                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -43,10 +43,17 @@
 
 <div id="contents">
     <a href="Entertainment.html"><button class="button button1"></button></a>
-    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
+    <a href="Mutual%20Help.html"><button class="button button2"></button></a>
 </div>
+
 <div id="navMyProfile">
+    <style>
+        .navUL {
+            width: 109%;
+            left: 29%;
+        }
+    </style>
     <ul class="navUL">
         <li class="navLi"><a href="interests.html">Interests</a></li>
         <li class="navLi"><a href="myevents.html">My Events</a></li>
@@ -54,10 +61,6 @@
     </ul>
 </div>
 
-<footer >
-    <div class="the_footer">
-        <h3>© 2016 - SocialMegazord inc.</h3>
-    </div>
-</footer>
+
 </body>
 </html>
