--- a/ChangePassword.html
+++ b/ChangePassword.html
@@ -36,13 +36,12 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
+                    <li><a id="page_logout" href="Login.html">Log out</a></li>
                 </ul>
             </div>
         </li>
     </ul>
 </div>
-
 
 <div id="contents">
     <a href="Entertainment.html"><button class="button button1"></button></a>
@@ -51,7 +50,6 @@
 </div>
 
 <div id="navMyProfile">
-
     <ul class="navUL">
         <li class="navLi"><a href="ChangeUsername.html">Change username</a></li>
         <li class="navLi"><a href="ChangePassword.html">Change password</a></li>
