--- a/Mutual Help.html
+++ b/Mutual Help.html
@@ -33,7 +33,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
+                    <li><a id="page_logout" href="Login.html">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -46,9 +46,6 @@
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
 </div>
 
-<div class="stuff">
-
-</div>
 
 </body>
 
