--- a/Registration.html
+++ b/Registration.html
@@ -17,7 +17,7 @@
                         <a href="Registration.html">Register</a>
                     </li>
                     <li>
-                        <a href="LoggedOut.html">Login</a>
+                        <a href="Login.html">Login</a>
                     </li>
                 </ul>
             </div>
@@ -32,11 +32,7 @@
 </div>
 
 <div id="navMyProfile">
-
-
-
     <div id="register">
-
         <form>
             <h1>
                 <span></span>
@@ -235,11 +231,7 @@
             </div>
         </form>
     </div>
-    <footer>
-        <div class="the_footer">
-            <h3>© 2016 - SocialMegazord inc.</h3>
-        </div>
-    </footer>
+</div>
 </body>
 
 </html>
