--- a/index.html
+++ b/index.html
@@ -34,18 +34,19 @@
                                     </ul>
                             </div>
                         </li>
-                        <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
+                        <li><a id="page_logout" href="Login.html">Log out</a></li>
                     </ul>
                 </div>
             </li>
         </ul>
+
     </div>
+
 
     <div id="contents">
         <a href="Entertainment.html"><button class="button button1"><h2>Entertainment</h2></button></a>
         <a href="science.html"><button class="button button3"><h2>Science</h2></button></a>
         <a href="Mutual%20Help.html"><button class="button button2"><h2>Mutual help</h2></button></a>
     </div>
-
 </body>
 </html>
