--- a/myvideos.html
+++ b/myvideos.html
@@ -34,7 +34,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
+                    <li><a id="page_logout" href="Login.html">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -60,7 +60,6 @@
         <li class="navLi"><a href="myvideos.html">My videos</a></li>
     </ul>
 </div>
-
 
 </body>
 </html>
