--- a/ChangeUsername.html
+++ b/ChangeUsername.html
@@ -36,7 +36,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
+                    <li><a id="page_logout" href="Login.html">Log out</a></li>
                 </ul>
             </div>
         </li>
