--- a/Entertainment.html
+++ b/Entertainment.html
@@ -34,7 +34,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
+                    <li><a id="page_logout" href="Login.html">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -46,7 +46,6 @@
     <a href="science.html"><button class="button button3"></button></a>
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
 </div>
-
 </body>
 
 </html>
