--- a/Settings.html
+++ b/Settings.html
@@ -36,7 +36,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
+                    <li><a id="page_logout" href="Login.html">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -57,6 +57,11 @@
         <li class="navLi"><a href="ChangeImage.html">Change image</a></li>
     </ul>
 </div>
+
+
+<footer >
+    <h3>© 2016 - SocialMegazord inc.</h3>
+</footer>
 
 
 </body>
