--- a/createNewEvent.html
+++ b/createNewEvent.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <title>My profile</title>
+    <title>Create new event</title>
+
 </head>
 
 <body>
+
 
 <div id="profile_div">
     <ul class="profile-wrapper">
@@ -41,7 +43,6 @@
     </ul>
 </div>
 
-
 <div id="contents">
     <a href="Entertainment.html"><button class="button button1"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
@@ -49,6 +50,12 @@
 </div>
 
 <div id="navMyProfile">
+    <style>
+        .navUL {
+            width: 109%;
+            left: 29%;
+        }
+    </style>
     <ul class="navUL">
         <li class="navLi"><a href="interests.html">Interests</a></li>
         <li class="navLi"><a href="myevents.html">My Events</a></li>
@@ -56,10 +63,43 @@
     </ul>
 </div>
 
-<footer >
-    <h3>© 2016 - SocialMegazord inc.</h3>
-</footer>
+
+<form class="formEvent">
+    <div class="eventType" >
+        <label class="lable">Choose Type: </label>
+        <select name="type" class="content">
+            <option value="patrol">Patrol</option>
+            <option value="meeting">Meeting</option>
+            <option value="gathering">Gathering</option>
+        </select>
+    </div>
+    <br>
+    <div>
+        <label class="lable">Event Description: </label><input class="content" type="text" name="disc" placeholder="Example: Clubing">
+    </div>
+    <br>
+    <div>
+        <label class="lable">Date: </label>
+        <input class="content" type="datetime-local" placeholder="Select a date for your Event">
+    </div>
+    <br>
+    <div>
+        <label class="lable">Place Of Event: </label>
+        <input class="content" type="text" placeholder="Choose a place">
+    </div>
+    <br>
+    <div>
+        <label class="lable">Additional Content:</label>
+    </div>
+    <div>
+        <textarea class="content" name="addContent" cols="40" rows="7" placeholder="Specify Your Event"></textarea>
+    </div>
+    <br>
+    <button class="submitButtons" type="submit">Submit</button>
+</form>
+
 
 
 </body>
 </html>
+
