--- a/interests.html
+++ b/interests.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
     <title>Interests</title>
+
 </head>
 
 <body>
+
 
 <div id="profile_div">
     <ul class="profile-wrapper">
@@ -34,7 +36,7 @@
                             </ul>
                         </div>
                     </li>
-                    <li><a id="page_logout" href="LoggedOut.html">Log out</a></li>
+                    <li><a id="page_logout" href="Login.html">Log out</a></li>
                 </ul>
             </div>
         </li>
@@ -56,10 +58,11 @@
     </style>
     <ul class="navUL">
         <li class="navLi"><a href="interests.html">Interests</a></li>
-        <li class="navLi"><a href="myevents.html">My Events</a></li>
+        <li class="navLi"><a href="createNewEvent.html">My Events</a></li>
         <li class="navLi"><a href="myvideos.html">My videos</a></li>
     </ul>
 </div>
+
 
 
 </body>
