Links to unlogged pages

--- a/Unlogged-users/science.html
+++ b/Unlogged-users/science.html
@@ -18,10 +18,10 @@
                 <a href ="#" class="name">Register/Login</a>
                 <ul class="menu">
                     <li>
-                        <a href="#">Register</a>
+                        <a href="../Registration.html">Register</a>
                     </li>
                     <li>
-                        <a href="LoggedOut.html">Login</a>
+                        <a href="../Login.html">Login</a>
                     </li>
                 </ul>
             </div>
