Fixed forms and added pages

--- a/Unlogged-users/ChangeUsername.html
+++ b/Unlogged-users/ChangeUsername.html
@@ -6,7 +6,7 @@
     <style>
         .w3-btn {margin-bottom:10px;}
     </style>
-    <title>Science</title>
+    <title>Change username</title>
 </head>
 
 <body>
@@ -49,7 +49,50 @@
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
 </div>
 
+<div id="navMyProfile">
+    <ul class="navUL">
+        <li class="navLi"><a href="ChangeUsername.html">Change username</a></li>
+        <li class="navLi"><a href="ChangePassword.html">Change password</a></li>
+        <li class="navLi"><a href="ChangeImage.html">Change image</a></li>
+    </ul>
+</div>
+
+<div id="settings">
+    <form class="form-horizontal">
+        <fieldset>
+            <legend>Change username</legend>
+            <div class="form-group">
+                <label for="inputEmail" class="col-lg-2 control-label">Current password</label>
+                <div class="col-lg-10">
+                    <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+                </div>
+            </div>
+            <br>
+
+            <div class="form-group">
+                <label for="input" class="col-lg-2 control-label">Current username</label>
+                <div class="col-lg-10">
+                    <input type="text" class="form-control" id="input" placeholder="Username">
+                </div>
+            </div>
+            <br>
+            <div class="form-group">
+                <label for="inputPassword" class="col-lg-2 control-label">New username</label>
+                <div class="col-lg-10">
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                </div>
+            </div>
+            <br>
+            <div class="form-group">
+                <div class="col-lg-10 col-lg-offset-2">
+                    <button type="reset" class="btn btn-default">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </div>
+        </fieldset>
+    </form>
+</div>
+
 
 </body>
-
 </html>
