--- a/Unlogged-users/Entertainment.html
+++ b/Unlogged-users/Entertainment.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <style>
-        .w3-btn {margin-bottom:10px;}
-    </style>
-    <title>Science</title>
+    <title>Entertainment</title>
 </head>
 
 <body>
+
 <div id="profile_div">
     <ul class="profile-wrapper">
         <li>
@@ -48,8 +46,6 @@
     <a href="science.html"><button class="button button3"></button></a>
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
 </div>
-
-
 </body>
 
 </html>
