--- a/Unlogged-users/Mutual Help.html
+++ b/Unlogged-users/Mutual Help.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <style>
-        .w3-btn {margin-bottom:10px;}
-    </style>
-    <title>Science</title>
+    <title>Mutual Help</title>
 </head>
 
 <body>
