--- a/Unlogged-users/MyProfile.html
+++ b/Unlogged-users/MyProfile.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <style>
-        .w3-btn {margin-bottom:10px;}
-    </style>
-    <title>Science</title>
+    <title>My profile</title>
 </head>
 
 <body>
+
 <div id="profile_div">
     <ul class="profile-wrapper">
         <li>
@@ -43,13 +41,25 @@
     </ul>
 </div>
 
+
 <div id="contents">
     <a href="Entertainment.html"><button class="button button1"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
 </div>
 
+<div id="navMyProfile">
+    <ul class="navUL">
+        <li class="navLi"><a href="interests.html">Interests</a></li>
+        <li class="navLi"><a href="myevents.html">My Events</a></li>
+        <li class="navLi"><a href="myvideos.html">My videos</a></li>
+    </ul>
+</div>
+
+<footer >
+    <h3>© 2016 - SocialMegazord inc.</h3>
+</footer>
+
 
 </body>
-
 </html>
