--- a/Unlogged-users/Settings.html
+++ b/Unlogged-users/Settings.html
@@ -6,7 +6,7 @@
     <style>
         .w3-btn {margin-bottom:10px;}
     </style>
-    <title>Science</title>
+    <title>Settings</title>
 </head>
 
 <body>
@@ -43,13 +43,26 @@
     </ul>
 </div>
 
+
 <div id="contents">
     <a href="Entertainment.html"><button class="button button1"></button></a>
     <a href="science.html"><button class="button button3"></button></a>
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
 </div>
 
+<div id="navMyProfile">
+    <ul class="navUL">
+        <li class="navLi"><a href="ChangeUsername.html">Change username</a></li>
+        <li class="navLi"><a href="ChangePassword.html">Change password</a></li>
+        <li class="navLi"><a href="ChangeImage.html">Change image</a></li>
+    </ul>
+</div>
+
+
+<footer >
+    <h3>© 2016 - SocialMegazord inc.</h3>
+</footer>
+
 
 </body>
-
 </html>
