--- a/Unlogged-users/myevents.html
+++ b/Unlogged-users/myevents.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/communities.css">
-    <style>
-        .w3-btn {margin-bottom:10px;}
-    </style>
-    <title>Science</title>
+    <title>My Events</title>
 </head>
 
 <body>
+
 <div id="profile_div">
     <ul class="profile-wrapper">
         <li>
@@ -49,7 +47,19 @@
     <a href="Mutual%20Help.html"><button class="button button2"></button></a>
 </div>
 
+<div id="navMyProfile">
+    <style>
+        .navUL {
+            width: 109%;
+            left: 29%;
+        }
+    </style>
+    <ul class="navUL">
+        <li class="navLi"><a href="interests.html">Interests</a></li>
+        <li class="navLi"><a href="myevents.html">My Events</a></li>
+        <li class="navLi"><a href="myvideos.html">My videos</a></li>
+    </ul>
+</div>
 
 </body>
-
 </html>
