--- a/Login.html
+++ b/Login.html
@@ -36,6 +36,10 @@
 
     <div id="login">
         <form>
+            <h1>
+                <span></span>
+            </h1>
+
             <div id="inputForm">
                 <input type="text" placeholder="User name"><br/><br/>
             </div>
