--- a/Entertainment.html
+++ b/Entertainment.html
@@ -6,7 +6,14 @@
     <script src="scripts/jquery-3.1.1.min.js"></script>
     <title>Entertainment</title>
 </head>
-
+<style>
+    body{
+        background-image: url("images/entertainment.jpg");
+        position: relative;
+        background-color: white;
+        background-size: cover;
+    }
+</style>
 <body>
 
 <div id="profile_div">
