--- a/Mutual Help.html
+++ b/Mutual Help.html
@@ -6,7 +6,14 @@
     <script src="scripts/jquery-3.1.1.min.js"></script>
     <title>Mutual Help</title>
 </head>
-
+<style>
+    body{
+        background-image: url("images/mutualhelp.jpg");
+        position: relative;
+        background-color: white;
+        background-size: cover;
+    }
+</style>
 <body>
 <div id="profile_div">
     <ul class="profile-wrapper">
